added color picker

--- a/GridColor.html
+++ b/GridColor.html
@@ -15,8 +15,20 @@
 </head>
 <body>
 <button id="reset">Reset Grid</button>
-<div class= "wrapper" id="wrapper">
-</div>
+<div class= "wrapper" id="wrapper"></div>
+<table>
+<div id="pallet"></div>
+<tr>
+<td><input type="range" id ="red" max="255"min="0" value="0"></td>
+<td id="redValue">0</td>
+</tr>
+<td><input type="range" id = "green" max="255" min="0" value="0"></td>
+<td id="greenValue">0</td>
+<tr>
+<td><input type="range" id= "blue" max="255" min="0" value="0"></td>
+<td id="blueValue">0</td>
+</tr>
+</table>
 </body>
 
 </html>
