--- a/GridColor.html
+++ b/GridColor.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 1.0 Strict//EN" 
-
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css" href="gridColor.css">
 
@@ -10,7 +8,7 @@
 
 <title>Magic Grid</title>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script> 
 <script src="GridColor.js" type="text/javascript"></script> 
 </head>
 <body>
@@ -19,13 +17,13 @@
 <table>
 <div id="pallet"></div>
 <tr>
-<td><input type="range" id ="red" max="255"min="0" value="0"></td>
+<td><input type="range" id ="red" max="255"min="0" value="0"></input></td>
 <td id="redValue">0</td>
 </tr>
-<td><input type="range" id = "green" max="255" min="0" value="0"></td>
+<td><input type="range" id = "green" max="255" min="0" value="0"></input></td>
 <td id="greenValue">0</td>
 <tr>
-<td><input type="range" id= "blue" max="255" min="0" value="0"></td>
+<td><input type="range" id= "blue" max="255" min="0" value="0"></input></td>
 <td id="blueValue">0</td>
 </tr>
 </table>
